# philosophers

philo_one/: CMakeLists.txt  Makefile  philo_one  user.output
philo_one/includes/: declarations.h  error_codes.hpp  structures.h
philo_one/libs/printf/: Makefile
philo_one/libs/printf/includes/: libft.h  printf.h
philo_one/libs/printf/libft/: ft_atoi.c  ft_bzero.c  ft_isdigit.c  ft_strchr.c  ft_strdup.c  (+2 more)
philo_one/srcs/: philo_one.c
philo_one/srcs/errors/: errors.c
philo_one/srcs/execution/: execute_thread.c
philo_one/srcs/messages/: alert.c  alert_2.c
philo_one/srcs/parsing/: parse_arguments.c  utils.c
philo_one/srcs/philosophers/: philo_handler.c  philo_handler_2.c  philo_handler_3.c
philo_three/: CMakeLists.txt  Makefile  TodoList  philo_three  philo_two  test.sh  user.output
philo_three/includes/: declarations.h  structures.h
philo_three/philo_three.dSYM/Contents/: Info.plist
philo_three/srcs/: philo_three.c
philo_three/srcs/errors/: errors.c
philo_three/srcs/execution/: execute_thread.c
philo_three/srcs/messages/: alert.c
philo_three/srcs/parsing/: parse_arguments.c  utils.c
philo_three/srcs/philosophers/: philo_handler.c  philo_handler_2.c  philo_handler_3.c
philo_two/: CMakeLists.txt  Makefile  philo_one  philo_two  test.sh  user.output
philo_two/includes/: declarations.h  structures.h
philo_two/srcs/: philo_two.c
philo_two/srcs/execution/: execute_thread.c
philo_two/srcs/messages/: alert.c
philo_two/srcs/parsing/: parse_arguments.c
philo_two/srcs/philosophers/: philo_handler.c  philo_handler_2.c  philo_handler_3.c
(+14 files in other folders)
